[metadata]
name = surf_data
version = 0.0.1
author = Andrew Candela
author_email = andrewpcandela@gmail.com
description = Read station (bouy) data from NOAA.gov
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
